feat: 역할 기반 API, 관장/관리자 기능, 소셜 로그인, 이용권 결제 추가
- JWT 권한 발급 버그 수정(역할 검사가 동작하지 않던 문제), 관리자/관장 API 보안 강화
- 관리자: 사용자 관리, 관장 승인, 신고/문의 처리, 체육관 노출 정지
- 관장: 체육관/관원/공지/이벤트/단체메시지/회원권 관리, AI 추천 랭킹
- 카카오/네이버 소셜 로그인 (액세스 토큰 재검증 방식)
- Toss Payments 이용권 결제 연동
- 전화번호 출석 체크, 얼굴인식/NFC는 자리만 마련(보류)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>